#161455 Non scalable project opening